update line&bar doc

--- a/笔记/echarts专栏/折线图.md
+++ b/笔记/echarts专栏/折线图.md
@@ -6,7 +6,20 @@
 ```
 ### 基本设置
 ```
-在series中将type设置为line
+xAxis: {
+  type: 'category',
+  data: []
+},
+yAxis: {
+  type: 'value'
+}
+series: [
+  {
+    name: '名字',
+    type: 'line',
+    data: []
+  }
+]
 ```
 ### 常见效果
 ![图片](../images/折线图.png)
