--- a/笔记/echarts专栏/柱状图.md
+++ b/笔记/echarts专栏/柱状图.md
@@ -8,7 +8,20 @@
 ```
 ### 基本设置
 ```
-在series中将type设置为bar
+xAxis: {
+  type: 'category',
+  data: []
+},
+yAxis: {
+  type: 'value'
+}
+series: [
+  {
+    name: '名字',
+    type: 'bar',
+    data: []
+  }
+]
 ```
 ### 常见效果
 ![图片](../images/bar.png)
