--- a/笔记/echarts专栏/05-地图.md
+++ b/笔记/echarts专栏/05-地图.md
@@ -1,7 +1,9 @@
 参考文档：https://echarts.apache.org/zh/option.html#series-map
 # 地图
 ## 特点
-
+```
+帮助我们从宏观角度快速看出不同地理位置上的数据差异
+```
 ## 基本配置
 ### 1. 引入地图的json数据
 ```
