--- a/笔记/echarts专栏/07-仪表盘.md
+++ b/笔记/echarts专栏/07-仪表盘.md
@@ -1,6 +1,7 @@
 参考文档: https://echarts.apache.org/zh/option.html#series-gauge.type
 
 # 仪表盘
+![仪表盘](../images/仪表盘.png)
 ## 特点
 ```
 仪表盘可以更直观的表现出某个指标的进度或实际情况
